err/fsq.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fsq'...
Compiling './lib/python3.5/site-packages/fsq/configure.py'...
***   File "./lib/python3.5/site-packages/fsq/configure.py", line 38
    except (OSError, IOError, ), err:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/constants.py'...
***   File "./lib/python3.5/site-packages/fsq/constants.py", line 80
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/done.py'...
***   File "./lib/python3.5/site-packages/fsq/done.py", line 36
    except (FSQMaxTriesError, FSQTTLExpiredError, FSQEnqueueError, ), e:
                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/enqueue.py'...
***   File "./lib/python3.5/site-packages/fsq/enqueue.py", line 120
    except (OSError, IOError, ), e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/install.py'...
***   File "./lib/python3.5/site-packages/fsq/install.py", line 24
    except (OSError, IOError, ), e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/internal.py'...
***   File "./lib/python3.5/site-packages/fsq/internal.py", line 29
    except (OSError, IOError, ), e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/items.py'...
***   File "./lib/python3.5/site-packages/fsq/items.py", line 80
    except IndexError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/lists.py'...
***   File "./lib/python3.5/site-packages/fsq/lists.py", line 18
    except (OSError, IOError), e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/push.py'...
***   File "./lib/python3.5/site-packages/fsq/push.py", line 19
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fsq/remote'...
Compiling './lib/python3.5/site-packages/fsq/scan.py'...
***   File "./lib/python3.5/site-packages/fsq/scan.py", line 105
    except (FSQWorkItemError, FSQCannotLockError, ), e:
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fsq/tests'...
Compiling './lib/python3.5/site-packages/fsq/tests/FSQTestCase.py'...
***   File "./lib/python3.5/site-packages/fsq/tests/FSQTestCase.py", line 16
    except (OSError, IOError, ), e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/tests/configure.py'...
***   File "./lib/python3.5/site-packages/fsq/tests/configure.py", line 20
    except (OSError, IOError, ), e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/tests/const.py'...
***   File "./lib/python3.5/site-packages/fsq/tests/const.py", line 54
    for j in (0, 1L, True, False, '8888888', ):
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/tests/constants.py'...
***   File "./lib/python3.5/site-packages/fsq/tests/constants.py", line 37
    MODES = (00700, 02700, )
                 ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/fsq/tests/enqueue.py'...
***   File "./lib/python3.5/site-packages/fsq/tests/enqueue.py", line 23
    except (OSError, IOError, ), e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fsq/tests/internal.py'...
***   File "./lib/python3.5/site-packages/fsq/tests/internal.py", line 23
    mask = 0040000
                 ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/fsq/utility.py'...
***   File "./lib/python3.5/site-packages/fsq/utility.py", line 66
    except FSQEnqueueError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonrpclib'...
Compiling './lib/python3.5/site-packages/jsonrpclib/SimpleJSONRPCServer.py'...
***   File "./lib/python3.5/site-packages/jsonrpclib/SimpleJSONRPCServer.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonrpclib-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
